// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      name="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      name="title"
      placeholder="Slaughterhouse-Five"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="numberInSeries"
    >
      Number in series
    </label>
    <input
      class="form-control"
      id="numberInSeries"
      name="numberInSeries"
      type="number"
      value="1"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="asdf"
    />
    <datalist
      id="categories"
    >
      <option
        value="asdf"
      />
    </datalist>
  </div>
</div>
`;

exports[`Book renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      name="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      name="title"
      placeholder="Slaughterhouse-Five"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="numberInSeries"
    >
      Number in series
    </label>
    <input
      class="form-control"
      id="numberInSeries"
      name="numberInSeries"
      type="number"
      value="1"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="asdf"
    />
    <datalist
      id="categories"
    >
      <option
        value="asdf"
      />
    </datalist>
  </div>
  <div
    class="mb-3 form-row"
  >
    <div
      class="form-check-inline ml-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="purchased"
          name="purchased"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="purchased"
          title=""
        >
          Purchased
        </label>
      </div>
    </div>
    <div
      class="form-check-inline form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="read"
          name="read"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="read"
          title=""
        >
          Read
        </label>
      </div>
    </div>
  </div>
</div>
`;
